--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- header -->
 <div class="ui fixed inverted menu">
     <div class="ui container">
-        <a href="#" class="header item">Xiang Yue</a>
+        <a href="index.html" class="header item">Xiang Yue</a>
         <a href="publication.html" class="item">Publications</a>
     </div>
 </div>
@@ -36,7 +36,7 @@
                         <a href="https://www.cs.cmu.edu/" target="_blank">School of Computer Science</a><br>
                         <a href="https://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>
                     </p>
-                    <p>Email: xyue2 [at] cs.cmu.edu</p>
+                    <p>Email: xyue2@andrew.cmu.edu</p>
                     <p>
                         <a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ&view_op=list_works&sortby=pubdate" target="_blank"><i class="google icon"></i>Google Scholar</a>
                         <a href="https://github.com/xiangyue9607" target="_blank"><i class="github icon"></i>Github</a>
@@ -112,7 +112,6 @@
         </div>
     </div>
 
-    <br><br>
     <div class="ui section divider"></div>
     <p>Last Updated: 04/2024</p>
     </div>
