--- a/publication.html
+++ b/publication.html
@@ -15,7 +15,7 @@
 <!-- header -->
 <div class="ui fixed inverted menu">
     <div class="ui container">
-        <a href="#" class="header item">Xiang Yue</a>
+        <a href="index.html" class="header item">Xiang Yue</a>
         <a href="publication.html" class="item">Publications</a>
     </div>
 </div>
@@ -30,7 +30,6 @@
 			<div class="ui top attached">
 
 				<div class="content">
-<!--                    <h3 class="title">NLP (Question Answering, Clinical NLP, Privacy-preserving NLP)</h3>-->
                     <p>*: Equal Contributions; ✝: My Advisee</p>
                     <ul>
                         <li>
@@ -218,19 +217,7 @@
                             </p>
                         </li>
 
-                        <!--                        <li>-->
-                        <!--                            <p><a href="https://arxiv.org/abs/2003.03235" target="_blank">Practical Annotation-->
-                        <!--                                Strategies for Question Answering Datasets</a><br>-->
-                        <!--                                Bernhard Kratzwald, <b><u>Xiang Yue</u></b>, Huan Sun and Stefan Feuerriegel<br>-->
-                        <!--                                <i>arXiv Preprint</i><br>-->
-                        <!--                            </p>-->
-                        <!--                        </li>-->
-
-                        <!--                    <div class="ui section divider"></div>-->
-
-                        <!--                    <h3 class="title">Data Mining (Graph Embedding, Graph Mining, Bioinformatics)</h3>-->
-
-
+                
                         <li>
                             <p><a href="https://academic.oup.com/bioinformatics/article/36/4/1241/5581350"
                                   target="_blank">Graph Embedding on Biomedical Networks: Methods, Applications, and
@@ -246,18 +233,6 @@
                             </p>
                         </li>
 
-                        <!--                        <li>-->
-                        <!--                            <p>-->
-                        <!--                                <a href="https://academic.oup.com/bib/advance-article-abstract/doi/10.1093/bib/bbaa140/5876601?redirectedFrom=fulltext"-->
-                        <!--                                   target="_blank">Tensor decomposition with relational constraints for predicting-->
-                        <!--                                    multiple types of microRNA-disease associations</a><br>-->
-                        <!--                                Feng Huang*, <b><u>Xiang Yue</u>*</b>, Zhankun Xiong, Zhouxin Yu, Shichao Liu, Wen Zhang<br>-->
-                        <!--                                <i><b>Briefings in Bioinformatics</b></i> <b>(Impact Factor: 8.990</b>) <br>-->
-                        <!--                                <a href="https://arxiv.org/abs/1911.05584" target="_blank">[arXiv version]</a>-->
-                        <!--                                <a href="https://github.com/BioMedicalBigDataMiningLab/TDRC" target="_blank">[Code&Datasets]</a>-->
-                        <!--                            </p>-->
-                        <!--                        </li>-->
-
                         <li>
                             <p><a href="https://arxiv.org/pdf/1906.09285.pdf" target="_blank">SurfCon: Synonym Discovery
                                 on Privacy-Aware Clinical Data</a><br>
@@ -271,108 +246,6 @@
                             </p>
                         </li>
 
-                        <!--                        <li>-->
-                        <!--                            <p><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">SFPEL-LPI: Sequence-based Feature Projection Ensemble Learning for Predicting LncRNA-Protein Interactions</a>-->
-                        <!--                                <br>-->
-                        <!--                                Wen Zhang, <b><u>Xiang Yue</u></b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang-->
-                        <!--                                <br>-->
-                        <!--                                <i>PLOS Computational Biology</i> (14 (12): e1006616) <b>(Impact Factor: 4.428</b>)-->
-                        <!--                                <br>-->
-                        <!--                                <a href="http://bioinfotech.cn/SFPEL-LPI/" target="_blank">Web Server</a> | <a href="https://journals.plos.org/ploscompbiol/article/file?id=10.1371/journal.pcbi.1006616.s001&type=supplementary" target="_blank">Suppl Proof</a> | <a href="http://www.bioinfotech.cn/static/ssgll/download/SFPEL%20code%26dataset.rar" target="_blank">Code&Dataset</a>-->
-                        <!--                            </p>-->
-                        <!--                        </li>-->
-
-                        <!--                        <li>-->
-                        <!--                            <p><a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-018-2220-4" target="_blank">Predicting drug-disease associations by using similarity constrained matrix factorization</a>-->
-                        <!--                                <br>-->
-                        <!--                                Wen Zhang, <b><u>Xiang Yue</u></b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng-->
-                        <!--                                Liu-->
-                        <!--                                <br>-->
-                        <!--                                <i>BMC Bioinformatics</i> (2018 Vol 19:233)-->
-                        <!--                                <br>-->
-                        <!--                                <a href="http://www.bioinfotech.cn/SCMFDD" target="_blank">Web Server</a> | <a href="https://github.com/xiangyue9607/SCMFDD" target="_blank">Code&Datasets</a>-->
-                        <!--                            </p>-->
-                        <!--                        </li>-->
-
-
-                        <!--                        <li>-->
-                        <!--                            <p><a href="https://www.sciencedirect.com/science/article/pii/S1046202318300045" target="_blank">Predicting drug-disease associations and their therapeutic function based on the drug-disease association bipartite network</a>-->
-                        <!--                                <br>-->
-                        <!--                                Wen Zhang, <b><u>Xiang Yue</u></b>, Feng Huang, Ruoqi Liu, Yanlin Chen, Feng Huang,-->
-                        <!--                                Chunyang Ruan-->
-                        <!--                                <br>-->
-                        <!--                                <i>Methods</i> (2018 Vol 145:51-59)-->
-                        <!--                            </p>-->
-                        <!--                        </li>-->
-
-                        <!--<li>-->
-                        <!--<p><a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-019-2644-5" target="_blank">Prediction of drug-disease associations based on ensemble meta paths and singular value decomposition</a>-->
-                        <!--<br>-->
-                        <!--Guangsheng Wu, Juan Liu and <b><u>Xiang Yue</u></b>-->
-                        <!--<br>-->
-                        <!--<i>The 17th Asia Pacific Bioinformatics Conference (APBC 2019)</i> (regular paper, recommended to the journal <i>BMC Bioinformatics</i>)-->
-                        <!--</p>-->
-                        <!--</li>-->
-
-                        <!--<li>-->
-                        <!--<p><a href="https://ieeexplore.ieee.org/document/8621191" target="_blank">Prediction of drug-disease associations and their effects by signed network-based nonnegative matrix factorization</a>-->
-                        <!--<br>-->
-                        <!--Wen Zhang, Feng Huang, <b><u>Xiang Yue</u></b>, Xiaoting Lu, Weitai Yang, Zhishuai Li, and Feng Liu-->
-                        <!--<br>-->
-                        <!--<i>IEEE Internatinal Conference on Bioinformatics and Biomedicine 2018 (BIBM 2018)</i> (short paper)-->
-                        <!--</p>-->
-                        <!--</li>-->
-
-
-                        <!--<li>-->
-                        <!--<p><a href="https://www.researchgate.net/publication/321983280_Predicting_drug-disease_associations_based_on_the_known_association_bipartite_network" target="_blank">Predicting drug-disease associations based on the known association bipartite network</a>-->
-                        <!--<br>-->
-                        <!--Wen Zhang, <b><u>Xiang Yue</u></b>, Yanlin Chen, Weiran Lin, Bolin Li, Feng Liu, Xiaohong Li-->
-                        <!--<br>-->
-                        <!--<i>IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017)</i> (regular paper, <b>acceptance rate: 79/414=19.0%</b>)-->
-                        <!--<br>-->
-                        <!--<a href="./slide/B293_BIBM2017.pdf" target="_blank">Slides</a>-->
-                        <!--</p>-->
-                        <!--</li>-->
-
-                        <!--<li>-->
-                        <!--<p><a href="./pdf/B315_BIBM2017.pdf" target="_blank">Predicting small RNAs in bacteria via sequence learning ensemble method</a>-->
-                        <!--<br>-->
-                        <!--Wen Zhang,  Jingwen Shi, Guifeng Tang, Wenjian Wu,<b><u>Xiang Yue</u></b>, Dingfang Li-->
-                        <!--<br>-->
-                        <!--<i>IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017)</i> (short paper)-->
-                        <!--<br>-->
-                        <!--<a href="./slide/B315_BIBM2017.pdf" target="_blank">Slides</a>-->
-                        <!--</p>-->
-                        <!--</li>-->
-
-                        <!--<li>-->
-                        <!--<p><a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-018-2535-1" target="_blank">Sequence-based bacterial small RNAs prediction using ensemble learning strategies</a>-->
-                        <!--<br>-->
-                        <!--Guifeng Tang,  Jingwen Shi, Wenjian Wu, <b><u>Xiang Yue</u></b>, Wen Zhang-->
-                        <!--<br>-->
-                        <!--<i>BMC Bioinformatics</i> (2018 Vol 19 (Suppl 20):503)-->
-                        <!--</p>-->
-                        <!--</li>-->
-
-                        <!--<li>-->
-                        <!--<p><a href="https://www.sciencedirect.com/science/article/pii/S1532046418302144" target="_blank">Manifold regularized matrix factorization for drug-drug interaction prediction</a>-->
-                        <!--<br>-->
-                        <!--Wen Zhang, Yanlin Chen, Dingfang Li,  <b><u>Xiang Yue</u></b>-->
-                        <!--<br>-->
-                        <!--<i>Journal of Biomedical Informatics</i> (2018 Vol 88: 90-97)-->
-                        <!--</p>-->
-                        <!--</li>-->
-
-
-                        <!--<li>-->
-                        <!--<p><a href="https://bmcsystbiol.biomedcentral.com/track/pdf/10.1186/s12918-017-0477-2" target="_blank">A unified frame of predicting side effects of drugs by using linear neighborhood similarity</a>-->
-                        <!--<br>-->
-                        <!--Wen Zhang, <b><u>Xiang Yue</u></b>, Feng Liu, Yanlin Chen, Shikui Tu, Qianlong Qu, Xining Zhang-->
-                        <!--<br>-->
-                        <!--<i>BMC Systems Biology</i> (2017 Vol 11 (Suppl 6) :101)-->
-                        <!--</p>-->
-                        <!--</li>-->
 
 					</ul>
 
