--- a/publication.html
+++ b/publication.html
@@ -54,7 +54,7 @@
                                 Cong Wei, Botao Yu, Ruibin Yuan, Renliang Sun, Ming Yin, Boyuan Zheng, 
                                 Zhenzhu Yang, Yibo Liu, Wenhao Huang,
                                 Huan Sun, Yu Su, Wenhu Chen<br>
-                                <i>CVPR 2024</i><br>
+                                <i>CVPR 2024 (<span class="textred">Oral: 90/11,532=0.8%</span>)</i><br>
                                 <a href="https://mmmu-benchmark.github.io/" target="_blank">[Project Page]</a>
                                 
                                 <a href="https://huggingface.co/datasets/MMMU/MMMU" target="_blank">[Huggingface
