--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 You might have heard of me because of the following recent work I led.
         <ul>
             <li> <a href="https://arxiv.org/abs/2311.16502">MMMU</a>: the commonly used multimodal language model evaluation suite.</li>
-            <li> <a href="https://arxiv.org/abs/2309.05653">MAmmoTH/MAmmoTH2</a>: Strong reasoning models achieving SoTA in 2023 and 2024.</li>
+            <li> <a href="https://arxiv.org/abs/2309.05653">MAmmoTH</a> / <a href="https://arxiv.org/abs/2405.03548">MAmmoTH2</a>: Strong reasoning models achieving SoTA in 2023 and 2024.</li>
             <li> <a href="https://arxiv.org/abs/2402.14658">OpenCodeInterpreter</a>: the open replication of OpenAI GPT-4 Code Interpreter to achieve SoTA on code generation tasks.</li>
         </ul>
             </div>
