--- a/index.html
+++ b/index.html
@@ -76,11 +76,14 @@
 
             <div class="ui text container">
                 <h2 class="ui header" id="highlight">Research Highlight</h2>
-                You might have heard of me because of the following recent work I led.
+                You might have heard of me because of the following work:
         <ul>
             <li> <a href="https://arxiv.org/abs/2311.16502">MMMU</a>: the commonly used multimodal language model evaluation suite.</li>
             <li> <a href="https://arxiv.org/abs/2309.05653">MAmmoTH</a> / <a href="https://arxiv.org/abs/2405.03548">MAmmoTH2</a>: Strong reasoning models achieving SoTA in 2023 and 2024.</li>
             <li> <a href="https://arxiv.org/abs/2402.14658">OpenCodeInterpreter</a>: the open replication of OpenAI GPT-4 Code Interpreter to achieve SoTA on code generation tasks.</li>
+            <li> <a href="https://mixeval.github.io/">MixEval</a>: a fast, cheap, and highly Arena correlated LLM benchmark.</li>
+            <li> <a href="https://arxiv.org/abs/2406.01574/">MMLU-Pro</a>: A more robust and challenging version of MMLU featuring more on reasoning.</li>
+            <li> <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers</a>: A mechanistic analysis revealing that why transformers could implicit reason through grokking.</li>
         </ul>
             </div>
 
@@ -89,6 +92,7 @@
             <div class="ui text container">
                 <h2 class="ui header" id="news">What's New</h2>
                 <ul>
+                    <li>[Jun 2024] ✈️ Attending CVPR 2024 in person! Ping me if you want a coffee chat!</li>
                     <li>[May 2024] 6 papers (3 main + 3 findings) have been accepted to ACL 2024!</li>
                     <li>[Feb 2024] Check out our <a href="https://opencodeinterpreter.github.io/">OpenCodeInterpreter</a>: Integrating Code Generation with Execution and Refinement</li>
                     <li>[Nov 2023] ️‍Check out our new multimodal benchmark <a href="https://mmmu-benchmark.github.io/">MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI</a> </li>
