--- a/publication.html
+++ b/publication.html
@@ -22,7 +22,7 @@
 
 		<!-- home -->
 		<div class="ui main text container">
-            <div class="ui huge header">Recent Highlighted Publications</div>
+            <div class="ui huge header">Highlighted Publications</div>
             Full list: <a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ&view_op=list_works&sortby=pubdate" target="_blank">(Google
             Scholar)</a>,
             <a href="https://www.semanticscholar.org/author/Xiang-Yue/145548079" target="_blank">(Semantic Scholar)</a>
@@ -33,7 +33,7 @@
                     <p>*: Equal Contributions; ✝: My Advisee</p>
                     <ul>
                         <li>
-                            <p>
+                            <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
                                 <a href="https://arxiv.org/abs/2405.03548" target="_blank">MAmmoTH2: Scaling Instructions from the Web</a><br>
                                 <b><u>Xiang Yue</u></b>, Tuney Zheng, Ge Zhang, Wenhu Chen<br>
                                 <i>arXiv 2024</i><br>
@@ -99,18 +99,20 @@
 
                         
                         <li>
-                            <p>
+                            <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
                                 <a href="https://arxiv.org/abs/2311.16502.pdf" target="_blank"><b>🔥 MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI</a></b><br>
                                 <b><u>Xiang Yue</u></b>, Yuansheng Ni, Kai Zhang, Tianyu Zheng, Ruoqi Liu, Ge Zhang, Samuel Stevens, Dongfu Jiang, Weiming Ren, Yuxuan Sun, Cong Wei, Botao Yu, Ruibin Yuan, Renliang Sun, Ming Yin, Boyuan Zheng, Zhenzhu Yang, Yibo Liu, Wenhao Huang, Huan Sun, Yu Su, Wenhu Chen<br>
-                                <i><b>CVPR 2024 (<span style="color: #C0392B; font-weight: bold;">Oral: 90/11,532=0.8%</span>)</i></b><br>
+                                <i><b>CVPR 2024 (<span style="color: #C0392B; font-weight: bold;">🏆 Award Candidate Paper, Oral: 24/11,532=0.2%</span>)</i></b><br>
                                 <a href="https://mmmu-benchmark.github.io/" target="_blank"><img src="https://img.shields.io/badge/🔗%20Project%20Page-FFFFFF" alt="Project Page"></a>
                                 <a href="https://huggingface.co/datasets/MMMU/MMMU" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Dataset-FFFFFF" alt="Dataset on HF"></a>
+                                <a href="./pdf/MMMU_poster.pdf" target="_blank"><img src="https://img.shields.io/badge/📄%20Poster-FFFFFF" alt="Poster"></a>
+                                <a href="./pdf/MMMU_CVPR2024.pdf" target="_blank"><img src="https://img.shields.io/badge/📊%20Slides-FFFFFF" alt="Slides"></a>
                                 <a href="https://github.com/MMMU-Benchmark/MMMU" target="_blank"><img src="https://img.shields.io/github/stars/MMMU-Benchmark/MMMU?style=social" alt="GitHub stars"></a>
-                            </p>
+                                </p>
                         </li>
                         
                         <li>
-                            <p>
+                            <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
                                 <a href="https://arxiv.org/pdf/2309.05653.pdf" target="_blank">MAmmoTH: Building Math Generalist Models through Hybrid Instruction Tuning</a><br>
                                 <b><u>Xiang Yue*</u></b>, Xingwei Qu, Ge Zhang, Yao Fu, Wenhao Huang, Huan Sun, Yu Su, Wenhu Chen*<br>
                                 <i><b>ICLR 2024 (<span style="color: #C0392B; font-weight: bold;">Spotlight</span>)</i></b><br>
