--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h2 class="ui header" id="highlight">Research Highlight</h2>
                 You might have heard of me because of the following work:
         <ul>
-            <li> <a href="https://arxiv.org/abs/2311.16502">MMMU</a>: the commonly used multimodal language model evaluation suite. <a href="./pdf/MMMU_CVPR2024.pdf" target="_blank">🔥[Slides]</a></li> 
+            <li> <a href="https://arxiv.org/abs/2311.16502">MMMU</a> / <a href="https://arxiv.org/abs/2409.02813">MMMU-Pro</a>: the commonly used multimodal language model evaluation suite. <a href="./pdf/MMMU_CVPR2024.pdf" target="_blank">🔥[Slides]</a></li> 
             <li> <a href="https://arxiv.org/abs/2309.05653">MAmmoTH</a> / <a href="https://arxiv.org/abs/2405.03548">MAmmoTH2</a>: Strong reasoning models achieving SoTA in 2023 and 2024.</li>
             <li> <a href="https://arxiv.org/abs/2402.14658">OpenCodeInterpreter</a>: the open replication of OpenAI GPT-4 Code Interpreter to achieve SoTA on code generation tasks.</li>
             <li> <a href="https://mixeval.github.io/">MixEval</a>: a fast, cheap, and highly Arena correlated LLM benchmark.</li>
@@ -92,6 +92,7 @@
             <div class="ui text container">
                 <h2 class="ui header" id="news">What's New</h2>
                 <ul>
+                    <li>[Sept 2024] 4 papers have been accepted to NeurIPS 2024!</li>
                     <li>[Jun 2024] ✈️ Attending CVPR 2024 and presenting 🔥MMMU <a href="./pdf/MMMU_CVPR2024.pdf" target="_blank">[Slides]</a>! Ping me if you want a coffee chat!</li>
                     <li>[May 2024] 6 papers (3 main + 3 findings) have been accepted to ACL 2024!</li>
                     <li>[Feb 2024] Check out our <a href="https://opencodeinterpreter.github.io/">OpenCodeInterpreter</a>: Integrating Code Generation with Execution and Refinement</li>
