--- a/publication.html
+++ b/publication.html
@@ -36,7 +36,7 @@
                             <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
                                 <a href="https://arxiv.org/abs/2405.03548" target="_blank">MAmmoTH2: Scaling Instructions from the Web</a><br>
                                 <b><u>Xiang Yue</u></b>, Tuney Zheng, Ge Zhang, Wenhu Chen<br>
-                                <i>arXiv 2024</i><br>
+                                <i>NeurIPS 2024</i><br>
                                 <a href="https://tiger-ai-lab.github.io/MAmmoTH2/" target="_blank"><img src="https://img.shields.io/badge/🔗%20Project%20Page-FFFFFF" alt="Project Page"></a>
                                 <a href="https://huggingface.co/datasets/TIGER-Lab/MAmmoTH2" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Dataset-FFFFFF" alt="Dataset on HF"></a>
                                 <a href="https://huggingface.co/models/TIGER-Lab/MAmmoTH2" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Model-FFFFFF" alt="Model on HF"></a>
@@ -48,7 +48,7 @@
                             <p>
                                 <a href="https://arxiv.org/abs/2405.15071" target="_blank">Grokked Transformers are Implicit Reasoners: A Mechanistic Journey to the Edge of Generalization</a><br>
                                 Boshi Wang, <b><u>Xiang Yue</u></b>, Yu Su, Huan Sun<br>
-                                <i>arXiv 2024</i><br>
+                                <i>NeurIPS 2024</i><br>
                                 <a href="https://github.com/OSU-NLP-Group/GrokkedTransformer" target="_blank"><img src="https://img.shields.io/github/stars/OSU-NLP-Group/GrokkedTransformer?style=social" alt="GitHub stars"></a>
                             </p>
                         </li>
@@ -57,7 +57,7 @@
                             <p>
                                 <a href="https://arxiv.org/abs/2406.06565" target="_blank">MixEval: Deriving Wisdom of the Crowd from LLM Benchmark Mixtures</a><br>
                                 Jinjie Ni, Fuzhao Xue, <b><u>Xiang Yue</u></b>, Yuntian Deng, Mahir Shah, Kabir Jain, Graham Neubig, Yang You<br>
-                                <i>arXiv 2024</i><br>
+                                <i>NeurIPS 2024</i><br>
                                 <a href="https://mixeval.github.io/" target="_blank"><img src="https://img.shields.io/badge/🔗%20Project%20Page-FFFFFF" alt="Project Page"></a>
                                 <a href="https://huggingface.co/datasets/MixEval/MixEval" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Dataset-FFFFFF" alt="Dataset on HF"></a>
                                 <a href="https://github.com/Psycoy/MixEval" target="_blank"><img src="https://img.shields.io/github/stars/Psycoy/MixEval?style=social" alt="GitHub stars"></a>
@@ -68,7 +68,7 @@
                             <p>
                                 <a href="https://arxiv.org/abs/2404.05955" target="_blank">VisualWebBench: How Far Have Multimodal LLMs Evolved in Web Page Understanding and Grounding?</a><br>
                                 Junpeng Liu*✝, Yifan Song*, Bill Yuchen Lin, Wai Lam, Graham Neubig, Yuanzhi Li, <b><u>Xiang Yue</u></b><br>
-                                <i>arXiv 2024</i><br>
+                                <i>COLM 2024</i><br>
                                 <a href="https://visualwebbench.github.io/" target="_blank"><img src="https://img.shields.io/badge/🔗%20Project%20Page-FFFFFF" alt="Project Page"></a>
                                 <a href="https://huggingface.co/datasets/VisualWebBench/VisualWebBench" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Dataset-FFFFFF" alt="Dataset on HF"></a>
                                 <a href="https://github.com/VisualWebBench/VisualWebBench" target="_blank"><img src="https://img.shields.io/github/stars/VisualWebBench/VisualWebBench?style=social" alt="GitHub stars"></a>
