--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <div class="ui text container">
                 <h2 class="ui header" id="news">What's New</h2>
                 <ul>
+                    <li>[Sept 2024] Attended <a href="https://genai-workshop.cs.umass.edu/" target="_blank">Generative AI Rising Star Workshop at UMASS</a>. </li>
                     <li>[Sept 2024] 4 papers have been accepted to NeurIPS 2024!</li>
                     <li>[Jun 2024] ✈️ Attending CVPR 2024 and presenting 🔥MMMU <a href="./pdf/MMMU_CVPR2024.pdf" target="_blank">[Slides]</a>! Ping me if you want a coffee chat!</li>
                     <li>[May 2024] 6 papers (3 main + 3 findings) have been accepted to ACL 2024!</li>
