--- a/publication.html
+++ b/publication.html
@@ -34,6 +34,20 @@
                     <ul>
                         <li>
                             <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
+                                <a href="https://arxiv.org/abs/2410.16153" target="_blank">Pangea: A Fully Open Multilingual Multimodal LLM for 39 Languages</a><br>
+                                <b><u>Xiang Yue</u></b>, Yueqi Song, Akari Asai, Seungone Kim, Jean de Dieu Nyandwi, Simran Khanuja, Anjali Kantharuban, Lintang Sutawika, Sathyanarayanan Ramamoorthy, Graham Neubig<br>
+                                <i>arXiv 2024</i><br>
+                                <a href="https://github.com/neulab/Pangea" target="_blank"><img src="https://img.shields.io/badge/🔗%20Project%20Page-FFFFFF" alt="Project Page"></a>
+                                <a href="https://huggingface.co/neulab/Pangea-7B" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Checkpoints-FFFFFF" alt="Checkpoints on HF"></a>
+                                <a href="https://huggingface.co/datasets/neulab/PangeaInstruct" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Dataset-FFFFFF" alt="Dataset on HF"></a>
+                                <a href="https://huggingface.co/spaces/neulab/Pangea" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Demo-FFFFFF" alt="Demo on HF"></a>
+                                <a href="https://github.com/neulab/Pangea" target="_blank"><img src="https://img.shields.io/github/stars/neulab/Pangea?style=social" alt="GitHub stars"></a>
+                            </p>
+                        </li>
+
+                        
+                        <li>
+                            <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
                                 <a href="https://arxiv.org/abs/2405.03548" target="_blank">MAmmoTH2: Scaling Instructions from the Web</a><br>
                                 <b><u>Xiang Yue</u></b>, Tuney Zheng, Ge Zhang, Wenhu Chen<br>
                                 <i>NeurIPS 2024</i><br>
