--- a/publication.html
+++ b/publication.html
@@ -19,8 +19,6 @@
         <a href="publication.html" class="item">Publications</a>
     </div>
 </div>
-
-		<!-- home -->
 		<div class="ui main text container">
             <div class="ui huge header">Highlighted Publications</div>
             Full list: <a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ&view_op=list_works&sortby=pubdate" target="_blank">(Google
@@ -35,9 +33,9 @@
                         <li>
                             <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
                                 <a href="https://arxiv.org/abs/2410.16153" target="_blank">Pangea: A Fully Open Multilingual Multimodal LLM for 39 Languages</a><br>
-                                <b><u>Xiang Yue</u></b>, Yueqi Song, Akari Asai, Seungone Kim, Jean de Dieu Nyandwi, Simran Khanuja, Anjali Kantharuban, Lintang Sutawika, Sathyanarayanan Ramamoorthy, Graham Neubig<br>
+                                <b><u>Xiang Yue*</u></b>, Yueqi Song*, Akari Asai, Seungone Kim, Jean de Dieu Nyandwi, Simran Khanuja, Anjali Kantharuban, Lintang Sutawika, Sathyanarayanan Ramamoorthy, Graham Neubig<br>
                                 <i>arXiv 2024</i><br>
-                                <a href="https://github.com/neulab/Pangea" target="_blank"><img src="https://img.shields.io/badge/🔗%20Project%20Page-FFFFFF" alt="Project Page"></a>
+                                <a href="https://neulab.github.io/Pangea/" target="_blank"><img src="https://img.shields.io/badge/🔗%20Project%20Page-FFFFFF" alt="Project Page"></a>
                                 <a href="https://huggingface.co/neulab/Pangea-7B" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Checkpoints-FFFFFF" alt="Checkpoints on HF"></a>
                                 <a href="https://huggingface.co/datasets/neulab/PangeaInstruct" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Dataset-FFFFFF" alt="Dataset on HF"></a>
                                 <a href="https://huggingface.co/spaces/neulab/Pangea" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Demo-FFFFFF" alt="Demo on HF"></a>
