--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <br>
 
             <div class="ui text container">
-                <b>🔥I am on the academic job market this year! Please feel free to reach out if you'd like to discuss opportunities. ✈️ I am attending NeurIPS 2024!</b>
+                <b><span style="color: #C0392B; font-weight: bold;">🔥I am on the academic job market this year! Please feel free to reach out if you'd like to discuss opportunities. ✈️ I am attending NeurIPS 2024!</span></b>
             </div>
 
             <br>
