--- a/talk.html
+++ b/talk.html
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 </div>
-                
+                <div class="ui section divider"></div>
 </body>
 </html>
             
