--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
             <br>
 
             <div class="ui text container">
+                <img src="images/neurips_poster_summary.png" alt="NeurIPS Poster Summary" style="display: block; margin: 0 auto; max-width: 100%; height: auto;">
+            </div>
+
+            <br>
+
+            <div class="ui text container">
 
                 My research aims to understand and enhance the reasoning capabilities of LLMs across different modalities and contexts while improving their responsibility and reliability.
                 <ul>
