--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
             <br>
 
-            <div class="ui text container">
+            <!-- <div class="ui text container">
                 <img src="images/neurips_poster_summary.png" alt="NeurIPS Poster Summary" style="display: block; margin: 0 auto; max-width: 100%; height: auto;">
             </div>
 
-            <br>
+            <br> -->
 
             <div class="ui text container">
 
