--- a/publication.html
+++ b/publication.html
@@ -41,7 +41,7 @@
                                 <p>
                                 <a href="https://arxiv.org/abs/2410.16153" target="_blank">Pangea: A Fully Open Multilingual Multimodal LLM for 39 Languages</a><br>
                                 <b><u>Xiang Yue*</u></b>, Yueqi Song*, Akari Asai, Seungone Kim, Jean de Dieu Nyandwi, Simran Khanuja, Anjali Kantharuban, Lintang Sutawika, Sathyanarayanan Ramamoorthy, Graham Neubig<br>
-                                <i>arXiv 2024</i><br>
+                                <i>ICLR 2025</i><br>
                                 <a href="https://neulab.github.io/Pangea/" target="_blank"><img src="https://img.shields.io/badge/🔗%20Project%20Page-FFFFFF" alt="Project Page"></a>
                                 <a href="https://huggingface.co/neulab/Pangea-7B" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Checkpoints-FFFFFF" alt="Checkpoints on HF"></a>
                                 <a href="https://huggingface.co/datasets/neulab/PangeaInstruct" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Dataset-FFFFFF" alt="Dataset on HF"></a>
