--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <br>
 
             <div class="ui text container">
-                <b><span style="color: #C0392B; font-weight: bold;">🔥I am on the academic job market this year! Please feel free to reach out if you'd like to discuss opportunities. ✈️ I am attending NeurIPS 2024!</span></b>
+                <b><span style="color: #C0392B; font-weight: bold;">🔥I am on the academic job market this year! Please feel free to reach out if you'd like to discuss opportunities.</span></b>
             </div>
 
             <br>
@@ -134,7 +134,8 @@
             <div class="ui text container">
                 <h2 class="ui header" id="news">What's New</h2>
                 <ul>
-                    <li><b>[Dec 2024] ✈️ Attending NeurIPS 2024 and presenting four papers: <a href="https://arxiv.org/abs/2405.03548">MAmmoTH2</a>, <a href="https://mixeval.github.io/">MixEval</a>, <a href="https://arxiv.org/abs/2406.01574/">MMLU-Pro</a>, and <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers</a>! Ping me if you want a coffee chat!</b>
+                    <li>[Jan 2025] Six papers have been accepted to ICLR 2025! </li>
+                    <li>[Dec 2024] ✈️ Attending NeurIPS 2024 and presenting four papers: <a href="https://arxiv.org/abs/2405.03548">MAmmoTH2</a>, <a href="https://mixeval.github.io/">MixEval</a>, <a href="https://arxiv.org/abs/2406.01574/">MMLU-Pro</a>, and <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers! Ping me if you want a coffee chat!</b>
                     </li>
                     <li>[Oct 2024] ✈️ Attending COLM 2024 and presenting <a href="https://visualwebbench.github.io/">VisualWebBench</a>!
                     </li>
