--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             <div class="ui text container">
                 <h2 class="ui header" id="news">What's New</h2>
                 <ul>
+                    <li>[Feb 2025] 🔥 We're taking a first deep dive into <a href="https://arxiv.org/pdf/2502.03373"> understanding long CoT reasoning in LLMs!  </a></li>
                     <li>[Jan 2025] Six papers have been accepted to ICLR 2025! </li>
                     <li>[Dec 2024] ✈️ Attending NeurIPS 2024 and presenting four papers: <a href="https://arxiv.org/abs/2405.03548">MAmmoTH2</a>, <a href="https://mixeval.github.io/">MixEval</a>, <a href="https://arxiv.org/abs/2406.01574/">MMLU-Pro</a>, and <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers! Ping me if you want a coffee chat!</b>
                     </li>
