--- a/publication.html
+++ b/publication.html
@@ -37,8 +37,15 @@
                     <p>*: Equal Contributions; ✝: My Advisee</p>
                     <ul>
                         <li>
+                            <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
+                                <a href="https://arxiv.org/abs/2502.03373" target="_blank">🔥 Demystifying Long Chain-of-Thought Reasoning in LLMs</a><br>
+                                Edward Yeo*✝, Yuxuan Tong*✝, Morry Niu, Graham Neubig, <b><u>Xiang Yue*</u></b><br>
+                                <i>arXiv 2025</i><br>
+                                <a href="https://github.com/eddycmu/demystify-long-cot" target="_blank"><img src="https://img.shields.io/github/stars/eddycmu/demystify-long-cot?style=social" alt="GitHub stars"></a>
+                            </p>
+                        </li>
+                        <li>
                             <p>
-                                <p>
                                 <a href="https://arxiv.org/abs/2410.16153" target="_blank">Pangea: A Fully Open Multilingual Multimodal LLM for 39 Languages</a><br>
                                 <b><u>Xiang Yue*</u></b>, Yueqi Song*, Akari Asai, Seungone Kim, Jean de Dieu Nyandwi, Simran Khanuja, Anjali Kantharuban, Lintang Sutawika, Sathyanarayanan Ramamoorthy, Graham Neubig<br>
                                 <i>ICLR 2025</i><br>
