--- a/teaching.html
+++ b/teaching.html
@@ -44,11 +44,13 @@
     <!-- Students Supervised / Mentored -->
         <h3 class="ui header">Students Supervised / Mentored</h3>
         <ul>
-            <li><strong>Kaylin Yueqi Song</strong> (CMU Undergrad/Master): Multilingual Multimodal LLMs (ICLR'25 submission)</li>
-            <li><strong>Jarvis Guo</strong> (Gap-year Master): ECG Multimodal LLMs (ICLR'25 submission)</li>
-            <li><strong>Yuelin Bai</strong> (Gap-year Master): ECG Multimodal LLMs (ICLR'25 submission)</li>
+            <li><strong>Edward Yeo</strong> (CMU Undergrad; IN.AI Engineer):  Demystifying Long CoT (ICML'25 submission) </li>
+            <li><strong>Yuxuan Tong</strong> (CMU Intern): Demystifying Long CoT (ICML'25 submission)  </li>
+            <li><strong>Kaylin Yueqi Song</strong> (CMU Undergrad/Master): Multilingual Multimodal LLMs (ICLR'25)</li>
+            <!-- <li><strong>Jarvis Guo</strong> (Master): ECG Multimodal LLMs (ICLR'25 submission)</li>
+            <li><strong>Yuelin Bai</strong> (Gap-year Master): ECG Multimodal LLMs (ACL'25)</li> -->
             <li><strong>Jin Yao</strong> (UVA Junior PhD): Unlearning LLMs (ACL'24)</li>
-            <li><strong>Junpeng Liu</strong>  (CUHK Junior PhD): VisualWebBench (COLM'24), MultiUI (ICLR'25 submission)</li>
+            <li><strong>Junpeng Liu</strong>  (CUHK Junior PhD): VisualWebBench (COLM'24), MultiUI (ICLR'25)</li>
             <li><strong>Tuney Zheng</strong>  (UWaterloo Intern): OpenCodeInterpreter (ACL'24 Findings), MAmmoTH2 (NeurIPS'24), MMMU (CVPR'24)</li>
             <li><strong>Yuansheng Ni</strong>  (UWaterloo Intern → UWaterloo Master): MMMU (CVPR'24)</li>
             <li><strong>Tianshu Zhang</strong>  (OSU Junior PhD): TableLlama (NAACL'24)</li>
