--- a/publication.html
+++ b/publication.html
@@ -39,11 +39,24 @@
                         <li>
                             <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
                                 <a href="https://arxiv.org/abs/2502.03373" target="_blank">🔥 Demystifying Long Chain-of-Thought Reasoning in LLMs</a><br>
-                                Edward Yeo*✝, Yuxuan Tong*✝, Morry Niu, Graham Neubig, <b><u>Xiang Yue*</u></b><br>
+                                Edward Yeo*✝, Yuxuan Tong*✝, Morry Niu, Graham Neubig, <b><u>Xiang Yue</u></b><br>
                                 <i>arXiv 2025</i><br>
                                 <a href="https://github.com/eddycmu/demystify-long-cot" target="_blank"><img src="https://img.shields.io/github/stars/eddycmu/demystify-long-cot?style=social" alt="GitHub stars"></a>
                             </p>
                         </li>
+
+                        <li>
+                            <p>
+                                <a href="https://arxiv.org/abs/2501.17703" target="_blank">Critique Fine-Tuning: Learning to Critique is More Effective than Learning to Imitate</a><br>
+                                Yubo Wang✝<b><u>Xiang Yue</u></b>, Wenhu Chen <br>
+                                <i>arXiv 2025</i><br>
+                                <a href="https://tiger-ai-lab.github.io/CritiqueFineTuning/" target="_blank"><img src="https://img.shields.io/badge/🔗%20Project%20Page-FFFFFF" alt="Project Page"></a>
+                                <a href="https://huggingface.co/TIGER-Lab/Qwen2.5-Math-7B-CFT" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Checkpoints-FFFFFF" alt="Checkpoints on HF"></a>
+                                <a href="https://huggingface.co/datasets/TIGER-Lab/WebInstruct-CFT" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Dataset-FFFFFF" alt="Dataset on HF"></a>
+                                <a href="https://github.com/TIGER-AI-Lab/CritiqueFinetuning" target="_blank"><img src="https://img.shields.io/github/stars/neulab/Pangea?style=social" alt="GitHub stars"></a>
+                            </p>
+                        </li>
+
                         <li>
                             <p>
                                 <a href="https://arxiv.org/abs/2410.16153" target="_blank">Pangea: A Fully Open Multilingual Multimodal LLM for 39 Languages</a><br>
