--- a/publication.html
+++ b/publication.html
@@ -40,7 +40,8 @@
                             <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
                                 <a href="https://arxiv.org/abs/2502.03373" target="_blank">🔥 Demystifying Long Chain-of-Thought Reasoning in LLMs</a><br>
                                 Edward Yeo*✝, Yuxuan Tong*✝, Morry Niu, Graham Neubig, <b><u>Xiang Yue</u></b><br>
-                                <i>arXiv 2025</i><br>
+                                <i>ICML 2025</i>(Also 🏆Best Paper Award at <a href="https://fm-wild-community.github.io/">ICLR 2025 Workshop on
+Foundation Models in the Wild</a>)<br>
                                 <a href="https://github.com/eddycmu/demystify-long-cot" target="_blank"><img src="https://img.shields.io/github/stars/eddycmu/demystify-long-cot?style=social" alt="GitHub stars"></a>
                             </p>
                         </li>
@@ -48,7 +49,7 @@
                         <li>
                             <p>
                                 <a href="https://arxiv.org/abs/2501.17703" target="_blank">Critique Fine-Tuning: Learning to Critique is More Effective than Learning to Imitate</a><br>
-                                Yubo Wang✝<b><u>Xiang Yue</u></b>, Wenhu Chen <br>
+                                Yubo Wang✝<b><u>, Xiang Yue</u></b>, Wenhu Chen <br>
                                 <i>arXiv 2025</i><br>
                                 <a href="https://tiger-ai-lab.github.io/CritiqueFineTuning/" target="_blank"><img src="https://img.shields.io/badge/🔗%20Project%20Page-FFFFFF" alt="Project Page"></a>
                                 <a href="https://huggingface.co/TIGER-Lab/Qwen2.5-Math-7B-CFT" target="_blank"><img src="https://img.shields.io/badge/🤗%20HF%20Checkpoints-FFFFFF" alt="Checkpoints on HF"></a>
