--- a/publication.html
+++ b/publication.html
@@ -40,7 +40,8 @@
                             <p style="background-color: #FFFFE0; padding: 10px; border-radius: 5px;">
                                 <a href="https://arxiv.org/abs/2502.03373" target="_blank">🔥 Demystifying Long Chain-of-Thought Reasoning in LLMs</a><br>
                                 Edward Yeo*✝, Yuxuan Tong*✝, Morry Niu, Graham Neubig, <b><u>Xiang Yue</u></b><br>
-                                <i>ICML 2025</i>(Also 🏆Best Paper Award at <a href="https://fm-wild-community.github.io/">ICLR 2025 Workshop on
+                                <i>ICML 2025</i><br>
+				    (Also 🏆Best Paper Award at <a href="https://fm-wild-community.github.io/">ICLR 2025 Workshop on
 Foundation Models in the Wild</a>)<br>
                                 <a href="https://github.com/eddycmu/demystify-long-cot" target="_blank"><img src="https://img.shields.io/github/stars/eddycmu/demystify-long-cot?style=social" alt="GitHub stars"></a>
                             </p>
