--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                 <h2 class="ui header" id="news">What's New</h2>
                 <ul>
                     <li>[May 2025] Three papers have been accepted to ICML 2025!</li>
-                    <li>[April 2025]  <a href="https://arxiv.org/pdf/2502.03373"> Demystifying long CoT reasoning in LLMs</a> got Best Paper Award at <a href="https://fm-wild-community.github.io/">ICLR 2025 Workshop on
-Foundation Models in the Wild</a>!  /li>
+                    <li>[April 2025]  <a href="https://arxiv.org/pdf/2502.03373"> Demystifying long CoT reasoning in LLMs</a> got a 🏆 Best Paper Award at <a href="https://fm-wild-community.github.io/">ICLR 2025 Workshop on
+Foundation Models in the Wild</a>!  </li>
                     <li>[Jan 2025] Six papers have been accepted to ICLR 2025! </li>
                     <li>[Dec 2024] ✈️ Attending NeurIPS 2024 and presenting four papers: <a href="https://arxiv.org/abs/2405.03548">MAmmoTH2</a>, <a href="https://mixeval.github.io/">MixEval</a>, <a href="https://arxiv.org/abs/2406.01574/">MMLU-Pro</a>, and <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers! Ping me if you want a coffee chat!</b>
                     </li>
